--- a/jupyter/minimal/ubi9-python-3.12/build-args/cpu.conf
+++ b/jupyter/minimal/ubi9-python-3.12/build-args/cpu.conf
@@ -1,2 +1,2 @@
-# Base Image   : UBI 9 with Python 3.12
-BASE_IMAGE=registry.access.redhat.com/ubi9/python-312:latest
+# Base Image   : c9s with Python 3.12
+BASE_IMAGE=quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest
