chore(base-images): add `ppc64le` and `s390x` architectures to odh-base-image-cpu-py312-c9s

--- a/.tekton/odh-base-image-cpu-py312-c9s-pull-request.yaml
+++ b/.tekton/odh-base-image-cpu-py312-c9s-pull-request.yaml
@@ -38,6 +38,9 @@ spec:
     value:
     - linux/x86_64
     - linux/arm64
+    - linux/ppc64le
+    # TODO(jdanek): Enable s390x once it is supported in the base image.
+    #- linux/s390x
   pipelineRef:
     name: multiarch-pull-request-pipeline
   taskRunTemplate:
