Add additional ARGS for pylock locations and names

--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.cuda
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.cuda
@@ -4,6 +4,8 @@ ARG TARGETARCH
 # configuration args    #
 #########################
 ARG BASE_IMAGE
+ARG PYLOCK_PATH
+ARG PYLOCK_NAME
 
 ####################
 # cuda-base        #
@@ -65,6 +67,8 @@ FROM cuda-base AS cuda-jupyter-minimal
 
 ARG JUPYTER_REUSABLE_UTILS=jupyter/utils
 ARG MINIMAL_SOURCE_CODE=jupyter/minimal/ubi9-python-3.12
+ARG PYLOCK_PATH
+ARG PYLOCK_NAME
 
 LABEL name="odh-notebook-jupyter-cuda-minimal-ubi9-python-3.12" \
     summary="Minimal Jupyter CUDA notebook image for ODH notebooks" \
@@ -90,15 +94,16 @@ ENV PATH="/usr/local/texlive/bin/linux:/usr/local/pandoc/bin:$PATH"
 
 USER 1001
 
-COPY ${MINIMAL_SOURCE_CODE}/pylock.toml ${MINIMAL_SOURCE_CODE}/start-notebook.sh ./
+COPY ${MINIMAL_SOURCE_CODE}${PYLOCK_PATH} ./${PYLOCK_NAME}
+COPY ${MINIMAL_SOURCE_CODE}/start-notebook.sh .
 
-# Install Python dependencies from requirements.txt file
+# Install Python dependencies from pylock file
 RUN /bin/bash <<'EOF'
 set -Eeuxo pipefail
 echo "Installing softwares and packages"
 # This may have to download and compile some dependencies, and as we don't lock requirements from `build-system.requires`,
 #  we often don't know the correct hashes and `--require-hashes` would therefore fail on non amd64, where building is common.
-uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./pylock.toml
+uv pip install --strict --no-deps --no-cache --no-config --no-progress --verify-hashes --compile-bytecode --index-strategy=unsafe-best-match --requirements=./${PYLOCK_NAME}
 # Disable announcement plugin of jupyterlab
 jupyter labextension disable "@jupyterlab/apputils-extension:announcements"
 # Replace Notebook's launcher, "(ipykernel)" with Python's version 3.x.y
