--- a/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/pytorch/ubi9-python-3.12/pyproject.toml
@@ -66,7 +66,7 @@ override-dependencies = [
     # Using >= instead of ~= to allow broader compatibility during resolution
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
-    # google-cloud-storage, kfp-pipeline-spec, kfp-server-api not available in CUDA index
+    # TODO(AIPCC-9537): kfp deps added as workaround for stripped metadata, but not available in CUDA index
     "google-cloud-storage ; sys_platform == 'never'",
     "kfp-pipeline-spec ; sys_platform == 'never'",
     "kfp-server-api ; sys_platform == 'never'",
