--- a/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/rocm/pytorch/ubi9-python-3.12/pyproject.toml
@@ -61,7 +61,7 @@ override-dependencies = [
     # Using >= instead of ~= to allow broader compatibility during resolution
     # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
     "python-lsp-server>=1.11.0",
-    # kfp-pipeline-spec, kfp-server-api, requests-toolbelt not available in ROCm index
+    # TODO(AIPCC-9537): kfp deps added as workaround for stripped metadata, but not available in ROCm index
     "kfp-pipeline-spec ; sys_platform == 'never'",
     "kfp-server-api ; sys_platform == 'never'",
     "requests-toolbelt ; sys_platform == 'never'",
