--- a/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/c9s-python-3.12/Dockerfile.rocm
@@ -64,10 +64,12 @@ RUN echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
     dnf install -y \
       rocm-core hip-runtime-amd \
     # system utilities
-      rocm-smi-lib rocminfo \
-      rocblas rocsolver rocfft rocrand rocsparse miopen-hip rccl \
+      rocm-smi-lib rocminfo amd-smi-lib \
+      rocblas rocsolver rocfft rocrand rocsparse miopen-hip rccl rocalution \
     # HIP (Heterogeneous-compute Interface for Portability)
-      hipblas hipblaslt hipfft hipsparse hiprand hipsolver \
+      hipblas hipblaslt hipfft hipsparse hiprand hipsolver hipsparselt hiptensor \
+    # OpenMP runtime support
+      openmp-extras-runtime \
     # suitesparse's /lib64/libspqr.so.2.0.9 needs libtbb.so.2
       tbb && \
     dnf clean all && rm -rf /var/cache/yum
