--- a/base-images/rocm/6.4/ubi9-python-3.12/Dockerfile.rocm
+++ b/base-images/rocm/6.4/ubi9-python-3.12/Dockerfile.rocm
@@ -62,12 +62,15 @@ RUN echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
     echo "enabled=1" >> /etc/yum.repos.d/amdgpu.repo && \
     echo "gpgcheck=0" >> /etc/yum.repos.d/amdgpu.repo && \
     dnf install -y \
-      rocm-core hip-runtime-amd \
+    # HIP (Heterogeneous-compute Interface for Portability) libraries meta-package
+    # Includes: hipblas, hipblaslt, hipfft, hiprand, hipsolver, hipsparse, hipsparselt,
+    # hiptensor, rccl, rocalution, rocblas, rocfft, rocm-core, rocm-smi-lib, rocrand,
+    # rocsolver, rocsparse
+      rocm-hip-libraries \
     # system utilities
-      rocm-smi-lib rocminfo amd-smi-lib \
-      rocblas rocsolver rocfft rocrand rocsparse miopen-hip rccl rocalution \
-    # HIP (Heterogeneous-compute Interface for Portability)
-      hipblas hipblaslt hipfft hipsparse hiprand hipsolver hipsparselt hiptensor \
+      rocminfo amd-smi-lib \
+    # ML libraries (includes miopen-hip)
+      rocm-ml-libraries \
     # OpenMP runtime support
       openmp-extras-runtime \
     # suitesparse's /lib64/libspqr.so.2.0.9 needs libtbb.so.2
