Externalize indexes outside pylock_generator script for better maintenance and flexibility

--- a/rstudio/rhel9-python-3.12/build-args/cpu.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cpu.conf
@@ -1,3 +1,5 @@
 # Base Image   : RHEL 9 with Python 3.12
 # Architectures: linux/arm64, linux/x86_64
+INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.3/cpu-ubi9/simple/
 BASE_IMAGE=registry.redhat.io/rhel9/python-312:latest
+
