--- a/jupyter/trustyai/ubi9-python-3.12/build-args/cpu.conf
+++ b/jupyter/trustyai/ubi9-python-3.12/build-args/cpu.conf
@@ -1,3 +1,3 @@
-# Base Image   : UBI 9 with Python 3.12
-# Architectures: linux/arm64, linux/ppc64le, linux/x86_64, linux/s360x
-BASE_IMAGE=registry.access.redhat.com/ubi9/python-312:latest
+INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.3/cpu-ubi9/simple/
+BASE_IMAGE=quay.io/opendatahub/odh-base-image-cpu-py312-c9s:latest
+PYLOCK_FLAVOR=cpu
