--- a/rstudio/c9s-python-3.12/build-args/cuda.conf
+++ b/rstudio/c9s-python-3.12/build-args/cuda.conf
@@ -1,1 +1,5 @@
+INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.3/cuda12.9-ubi9/simple/
+# TODO(RHAIENG-3071): Add CPU index as fallback for packages not available in CUDA/ROCm indexes
+CPU_INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.3/cpu-ubi9/simple/
 BASE_IMAGE=quay.io/opendatahub/odh-base-image-cuda-py312-c9s:v12.9
+
