--- a/rstudio/rhel9-python-3.12/build-args/cuda.conf
+++ b/rstudio/rhel9-python-3.12/build-args/cuda.conf
@@ -1,3 +1,6 @@
 # Base Image   : RHEL 9.6 with Python 3.12
 # Architectures: linux/arm64, linux/x86_64
+INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.3/cuda12.9-ubi9/simple/
+# TODO(RHAIENG-3071): Add CPU index as fallback for packages not available in CUDA/ROCm indexes
+CPU_INDEX_URL=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.3/cpu-ubi9/simple/
 BASE_IMAGE=registry.redhat.io/rhel9/python-312:latest
